<resources>
    <string name="app_name">77777</string>
    <string name="apple">Войти с Apple</string>
    <string name="facebook">Войти с Facebook</string>
    <string name="regist">Регистрация</string>
    <string name="vooiti">Войти</string>
    <string name="regiiist">Регистрация</string>
    <string name="voitiii">Войти</string>
    <string name="pochta">Адрес эл. почты</string>
    <string name="password">Пароль</string>
    <string name="zabparol">Забыли пароль?</string>
    <string name="voitti">Войти</string>
    <string name="vvoiti">Войти</string>
    <string name="rregist">Регистрация</string>
    <string name="name">Имя</string>
    <string name="pocchta">Адрес эл.почты</string>
    <string name="passsword">Пароль</string>
    <string name="zabbparol">Забыли пароль?</string>
    <string name="regiiiist">Регистрация</string>
    <string name="pomosh">Помощь</string>
    <string name="vyboryaz">Выбор языка</string>
    <string name="information">Моя информация</string>
    <string name="promo">Промо-коды</string>
    <string name="vyiti">Выйти</string>
    <string name="ovosh">Овощи</string>
    <string name="moloch">Молочная продукция</string>
    <string name="fruct">Фрукты</string>
    <string name="xx">1x</string>
    <string name="kgs">KGS 22,00</string>
    <string name="tykva">Тыква вес</string>
    <string name="xxxx">1x</string>
    <string name="kgss">KGS 106,00</string>
    <string name="pomidor">Помидоры вес</string>
    <string name="xxxxxxx">1x</string>
    <string name="kggs">KGS 106,00</string>
    <string name="svekla">Свекла вес</string>
    <string name="dobro">Добро пожаловать!</string>
</resources>