<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FourActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="320dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button5"
            android:background="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="23sp"
            android:text="@string/vvoiti"
            android:textColor="@color/green"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginTop="100dp"
            style="@style/text_view_style5"
            android:layout_marginBottom="65dp"
            android:text="@string/rregist"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:hint="@string/name"
            android:textSize="18sp"
            android:layout_marginBottom="25sp"/>
        <EditText
            android:id="@+id/textView6"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:hint="@string/pocchta"
            android:textColor="#6A6868"
            android:textSize="18sp"
            android:layout_marginBottom="25dp"/>

        <EditText
            android:id="@+id/textView7"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:hint="@string/passsword"
            android:textColor="#6A6868"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/zabbparol"
            style="@style/text_view_style4"/>

        <Button
            android:id="@+id/button7"
            android:background="@color/green"
            android:layout_width="270dp"
            android:layout_height="57dp"
            android:text="@string/regiiiist"
            android:textAllCaps="false"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/button1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>