<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SevenActivity">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button1"
            android:layout_width="410dp"
            android:layout_height="80dp"
            android:background="#325B5656" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <Button
            android:id="@+id/button9"
            android:layout_width="203dp"
            android:layout_height="80dp"
            android:layout_marginTop="3dp"
            android:background="#405B5656"
            android:text="@string/ovosh"
            android:textColor="#000000"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="203dp"
            android:layout_height="80dp"
            android:layout_marginTop="3dp"
            android:background="#405B5656"
            android:text="@string/moloch"
            android:textColor="#000000"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <Button
            android:id="@+id/button4"
            android:layout_width="203dp"
            android:layout_height="80dp"
            android:layout_marginTop="3dp"
            android:background="#405B5656"
            android:text="@string/fruct"
            android:textColor="#000000"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="203dp"
            android:layout_height="80dp"
            android:layout_marginTop="3dp"
            android:background="#405B5656" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="234dp"
            android:layout_height="101dp"
            app:srcCompat="@drawable/_017_04_18_17_48_57_393050_removebg_preview_1" />


    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu"/>



</androidx.constraintlayout.widget.ConstraintLayout>