<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EightActivity">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:layout_width="410dp"
            android:layout_height="60dp"
            android:background="#1D5B5656"
            android:textColor="#99E265"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout6"
        app:layout_constraintStart_toStartOf="@+id/linearLayout6"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="231dp"
            android:layout_height="77dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/_017_04_18_17_48_57_393050_removebg_preview_1" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="44dp"
            android:layout_height="37dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="7dp"
            app:srcCompat="@drawable/ellipse_1" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="15dp"
            android:text="@string/xx"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="48dp"
            android:layout_height="39dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="120dp"
            app:srcCompat="@drawable/ellipse_1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginTop="10dp"
            android:text="@string/kgs"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="80dp"
            android:text="@string/tykva"
            android:textColor="@color/black"
            android:textSize="26sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="20dp"
            android:layout_height="8dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="95dp"
            app:srcCompat="@drawable/rectangle_26__2_" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout14">

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="205dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="45dp"
            app:srcCompat="@drawable/___1_" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:layout_width="410dp"
            android:layout_height="60dp"
            android:background="#1D5B5656"
            android:textColor="#99E265"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout6"
        app:layout_constraintStart_toStartOf="@+id/linearLayout6"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="231dp"
            android:layout_height="77dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/_017_04_18_17_48_57_393050_removebg_preview_1" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="44dp"
            android:layout_height="37dp"
            android:layout_marginTop="235dp"
            android:layout_marginEnd="7dp"
            app:srcCompat="@drawable/ellipse_1" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="198dp"
            android:layout_marginEnd="15dp"
            android:text="@string/xxxx"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="48dp"
            android:layout_height="39dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="235dp"
            app:srcCompat="@drawable/ellipse_1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginTop="130dp"
            android:text="@string/kgss"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="313dp"
            android:text="@string/pomidor"
            android:textColor="@color/black"
            android:textSize="26sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="20dp"
            android:layout_height="8dp"
            android:layout_marginTop="350dp"
            android:layout_marginEnd="95dp"
            app:srcCompat="@drawable/rectangle_26__2_" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout14"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout22">

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="45dp"
            app:srcCompat="@drawable/___1_" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="44dp"
            android:layout_height="37dp"
            android:layout_marginTop="355dp"
            android:layout_marginEnd="7dp"
            app:srcCompat="@drawable/ellipse_1" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="313dp"
            android:layout_marginEnd="15dp"
            android:text="@string/xxxxxxx"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="48dp"
            android:layout_height="39dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="355dp"
            app:srcCompat="@drawable/ellipse_1" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginTop="250dp"
            android:text="@string/kggs"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="553dp"
            android:text="@string/svekla"
            android:textColor="@color/black"
            android:textSize="26sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView23"
            android:layout_width="20dp"
            android:layout_height="8dp"
            android:layout_marginTop="590dp"
            android:layout_marginEnd="95dp"
            app:srcCompat="@drawable/rectangle_26__2_" />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/linearLayout35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout14"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout22">

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="133dp"
            android:layout_marginBottom="45dp"
            app:srcCompat="@drawable/___1_" />


    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu"/>






</androidx.constraintlayout.widget.ConstraintLayout>